--- a/res/layout/adslist.xml
+++ b/res/layout/adslist.xml
@@ -82,100 +82,90 @@
             </LinearLayout>
         </RelativeLayout>
 
+        <LinearLayout
+        android:id="@+id/topheader"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/lightgray"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="vertical" >
+
+        <ImageView
+            android:id="@+id/ImageView03"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/logo" />
+
         <RelativeLayout
-            android:id="@+id/RelativeLayout01"
+            android:id="@+id/searchbarlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:background="@color/lightgray"
+            android:layout_marginBottom="8dp"
             android:layout_marginTop="10dp"
+            android:background="@color/lightgray"
             android:gravity="center_vertical|center_horizontal" >
 
-            <ImageView
-                android:id="@+id/ImageView03"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/logo" />
+                android:layout_alignParentRight="true"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:orientation="horizontal" >
 
-            <RelativeLayout
-                android:id="@+id/RelativeLayout02"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/ImageView03"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:gravity="center" >
-
-                <LinearLayout
-                    android:id="@+id/llSearchLayout"
+                <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:orientation="horizontal" >
+                    android:layout_height="match_parent" >
 
-                    <RelativeLayout
+                    <EditText
+                       android:id="@+id/edt_search_adactivity"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" >
+                        android:layout_height="40dp"
+                        android:background="@drawable/search_txt"
+                        android:ems="10"
+                        android:hint="这里总有你需要的"
+                        android:paddingLeft="25dp"
+                        android:singleLine="true"
+                        android:textSize="12sp" />
 
-                        <EditText
-                            android:id="@+id/edt_search_adactivity"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:background="@drawable/search_txt"
-                            android:ems="10"
-                            android:hint="这里总有你需要的"
-                            android:paddingLeft="25dp"
-                            android:singleLine="true"
-                            android:textSize="12sp" >
-
-                            <requestFocus />
-                        </EditText>
-
-                        <ImageView
-                            android:id="@+id/ImageView02"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="3dp"
-                            android:src="@drawable/searchicon" />
-                    </RelativeLayout>
-
-                    <RelativeLayout
+                    <ImageView
+                       android:id="@+id/ImageView02"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" >
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="8dp"
+                        android:src="@drawable/searchicon" />
+                </RelativeLayout>
 
-                        <ImageView
-                            android:id="@+id/btnsearch_adlist"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:scaleType="fitXY"
-                            android:clickable="true"
-                            android:src="@drawable/searchbutton" />
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
 
-                        <TextView
-                            android:id="@+id/TextView01"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"
-                            android:layout_centerVertical="true"
-                            android:text="搜索" />
-                    </RelativeLayout>
-                </LinearLayout>
+                    <ImageView
+                       android:id="@+id/btnsearch_adlist"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/searchbutton" />
 
-                <View
-                    android:id="@+id/view_divider"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_below="@+id/llSearchLayout"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/horizontalseperator" />
-            </RelativeLayout>
+                    <TextView
+                        android:id="@+id/TextView01"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:text="搜索" />
+                </RelativeLayout>
+            </LinearLayout>
         </RelativeLayout>
+
+        <View
+            android:id="@+id/view_divider"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/horizontalseperator" />
+    </LinearLayout>
 
     </RelativeLayout>
 
