--- a/res/layout/contactus.xml
+++ b/res/layout/contactus.xml
@@ -44,7 +44,7 @@
                     android:id="@+id/txtaddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="60dp"
+                   android:layout_centerHorizontal="true"
                     android:text="杭州凡闻科技有限公司"
                     android:textColor="@color/white" />
             </RelativeLayout>
@@ -53,8 +53,8 @@
                 android:id="@+id/addresslayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
+                android:layout_gravity="center_horizontal"
+                
                 android:layout_marginTop="20dp" >
 
                 <ImageView
@@ -68,9 +68,8 @@
                     android:id="@+id/txtaddress2"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginLeft="15dp"
                     android:layout_weight=".8"
-                   
                     android:textColor="@color/white" />
             </LinearLayout>
 
@@ -78,8 +77,7 @@
                 android:id="@+id/layoutphone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
+                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp" >
 
                 <ImageView
@@ -93,7 +91,7 @@
                     android:id="@+id/txtphone"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="7dp"
+                    android:layout_marginLeft="20dp"
                     android:layout_weight=".8"
                     android:textColor="@color/linkcolor" />
             </LinearLayout>
@@ -102,8 +100,7 @@
                 android:id="@+id/layoutfax"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
+                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp" >
 
                 <ImageView
@@ -118,6 +115,7 @@
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".8"
+                     android:layout_marginLeft="15dp"
                     android:textColor="@color/white" />
             </LinearLayout>
 
@@ -125,8 +123,7 @@
                 android:id="@+id/layoutmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
+                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp" >
 
                 <ImageView
@@ -141,6 +138,7 @@
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".8"
+                     android:layout_marginLeft="15dp"
                     android:textColor="@color/linkcolor" />
             </LinearLayout>
 
@@ -148,8 +146,7 @@
                 android:id="@+id/layoutweb"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp" >
 
                 <ImageView
@@ -164,6 +161,7 @@
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".8"
+                     android:layout_marginLeft="15dp"
                     android:textColor="@color/linkcolor" />
             </LinearLayout>
 
@@ -171,8 +169,7 @@
                 android:id="@+id/layoutfindus"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
+                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp" >
 
                 <ImageView
