--- a/res/layout-hdpi/categorylayout.xml
+++ b/res/layout-hdpi/categorylayout.xml
@@ -13,7 +13,7 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="300dp"
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_marginBottom="20dp"
             android:background="@drawable/tablebg"
