--- a/res/layout/categorylayout.xml
+++ b/res/layout/categorylayout.xml
@@ -57,7 +57,8 @@
                     android:id="@+id/imgelectronic"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_marginBottom="5dp" />
+                    android:layout_marginBottom="5dp"
+                   />
 
                 <TextView
                     android:id="@+id/txtelectronics"
